# cosmic-applet-ai-quota

./: Cargo.toml  README.md  install-tray.sh  install.sh
applet/: Cargo.toml
applet/src/: app.rs  main.rs
quota-providers/: Cargo.toml
quota-providers/examples/: smoke.rs
quota-providers/src/: claude.rs  codex.rs  gemini.rs  lib.rs
resources/: dev.thorsteinson.AiQuotaApplet.desktop
tray/: Cargo.toml
tray/src/: icon.rs  main.rs
