[package]
name = "cosmic-applet-ai-quota"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "COSMIC panel applet showing Claude / Gemini / OpenAI subscription quota usage"

[dependencies]
quota-providers = { path = "../quota-providers" }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
